fix product pages nav wrong padding-bottom

--- a/assets/scss/pages/_header.scss
+++ b/assets/scss/pages/_header.scss
@@ -175,7 +175,7 @@
 @include Pad {
     .b-product-nav__nav-item:hover {
         a {
-            padding-bottom: 16px;
+            padding-bottom: 8px;
         }
     }
 }
@@ -185,7 +185,7 @@
     border-bottom-style: solid;
     border-bottom-color: $primary;
     a {
-        padding-bottom: 16px;
+        padding-bottom: 8px;
     }
 }
 @include Pad {
